# vaultenv

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml  release-please-config.json  renovate.json  renovate.json5
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  extended.yml  release-please.yml  release.yml
src/: auth.rs  cloud_metadata.rs  config.rs  lib.rs  main.rs  mount_info.rs  secrets_file.rs  types.rs  vault_api.rs
src/vault_api/: client.rs  data.rs  error.rs  mod.rs  resolver.rs
tests/: end_to_end.rs  vault_api_mocked.rs  vault_api_real.rs
tests/integration/: README.md
