[package]
name = "vaultenv"
version = "0.1.0"
authors = ["Pedro Tramontin <pedro@example.com>"]
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0 OR BSD-3-Clause"
description = "Runs processes with secrets from HashiCorp Vault"
repository = "https://github.com/pedro-tramontin/vaultenv"
keywords = ["vault", "secrets", "hashicorp", "env"]
categories = ["command-line-utilities"]

[dependencies]
tokio = { version = "1", features = ["full"] }
# `rustls-tls` (pure-Rust TLS via `rustls` + bundled Mozilla CA roots) instead
# of the default `native-tls`, so the build does not depend on
# target-architecture OpenSSL system libraries. With the default `native-tls`
# back-end, the cross-compile targets (i686-unknown-linux-gnu,
# aarch64-unknown-linux-gnu) needed the target-architecture's `libssl-dev`
# installed on the build host — `ubuntu-latest` does not provide it, and
# `cross`'s default images do not include it for every target. The cert is
# issued by Let's Encrypt (verified at vault's Tailscale HTTPS endpoint), so
# bundled Mozilla roots are sufficient — no `rustls-tls-native-roots` needed.
#
# `default-features = false` is required: reqwest's `default` feature enables
# `default-tls` (the native-tls back-end), and a feature cannot disable a
# default feature, only add on top. Without this, both TLS back-ends are
# compiled in and `openssl-sys` reappears as a transitive dep — the very
# problem we are removing. We then re-enable the other useful defaults
# (`charset` for response decoding, `http2` for HTTP/2 support,
# `system-proxy` for HTTP_PROXY env var handling) so behaviour is unchanged
# apart from the TLS back-end swap.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "charset", "http2", "system-proxy"] }
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["env", "derive"] }
backon = "1"
nix = { version = "0.29", features = ["process"] }
winnow = "0.7"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6.0.0"
which = "7"
base64 = "0.22"
percent-encoding = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
tower = { version = "0.5", features = ["util"] }
wiremock = "0.6"
testcontainers = "0.27"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }

[profile.release]
lto = true
strip = true
opt-level = 3
